--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,8 +5,8 @@
   "description": "Automatically adds links to QR Images viewed in Chrome.",
   "version": "0.0.1",
 
-  "icons": { "48": "48temp.png",
-             "128": "temp.png"},
+  "icons": { "48": "48logo.png",
+             "128": "128logo.png"},
 
   "permissions": [
     "<all_urls>"
